Crear vehiculo y editar vehiculo

--- a/src/app/pages/layout/layout.page.html
+++ b/src/app/pages/layout/layout.page.html
@@ -42,7 +42,7 @@
         <cwc-sidenav-menu-item  label="Buscar viaje" [iconName]="'radio-static'" [routerLink]="['/app/search-travel']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
         <cwc-sidenav-menu-item  label="Notificaciones" [iconName]="'radio-static'" [routerLink]="['/app/notifications']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
         <cwc-sidenav-menu-item  label="Lista de espera" [iconName]="'radio-static'" [routerLink]="['/app/waiting-list']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item *ngIf="notDriver"  label="Vehículos" [iconName]="'radio-static'" [routerLink]="['/app/vehicles']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
+        <cwc-sidenav-menu-item *ngIf="notDriver"  label="Vehículos" [iconName]="'radio-static'" [routerLink]="['/app/vehiculos']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
         <cwc-sidenav-menu-item *ngIf="notDriver" label="Conductores" [iconName]="'radio-static'" [routerLink]="['/app/drivers']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
         <cwc-sidenav-menu-item  label="Llamar a centro de servicio" [iconName]="'radio-static'" [routerLink]="['/app/call-service']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
 
