--- a/src/app/pages/vehicles/vehicles.page.html
+++ b/src/app/pages/vehicles/vehicles.page.html
@@ -14,9 +14,6 @@
     </cwc-cell>    
   </cwc-grid>  
   <h6 class="text-vehicles">Vehículos (4)</h6>
-
-
-
   <cwc-card class="m-all-xs action accordion">
     <div class="card-content">
       <cwc-grid class="demo-grid" >
@@ -46,9 +43,5 @@
       </cwc-grid>
     </div>
   </cwc-card>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button routerLink="agregar">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  <cwc-button class="float" routerLink="agregar" design-version="v2" size="large" ratio="square" trailing-icon="plus"></cwc-button>
 </app-layout>
