--- a/src/app/pages/vehicles/vehicles.page.scss
+++ b/src/app/pages/vehicles/vehicles.page.scss
@@ -44,3 +44,10 @@
     font-size: small;
     font-weight: 700;
 }
+
+.float{
+	position:fixed;
+	bottom:15px;
+	right:15px;
+	text-align: center;
+}
