--- a/src/app/pages/travels/travels.page.html
+++ b/src/app/pages/travels/travels.page.html
@@ -3,54 +3,59 @@
     <form>
       <cwc-grid class="demo-grid" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;">
         <cwc-cell colspan="12" mobile-colspan="12">
-          <cwc-input
+          <cwc-select
             style="width: 100%;"
-            label='Origen'
-            design-version="v2"
-            ngDefaultControl
-            required
-          ></cwc-input>
-        </cwc-cell>
-        <cwc-cell colspan="12" mobile-colspan="12">
-          <cwc-input
-            style="width: 100%;" 
             label='Departamento'
-            design-version="v2" 
-            ngDefaultControl
-            required
-          ></cwc-input>
+            (cwcChange)="changeDepartament($event)"
+            design-version="v2">
+            <cwc-select-option value="0" selected="">Seleccionar</cwc-select-option>
+            <cwc-select-option [value]="departament" *ngFor="let departament of departamentList" >{{departament}}</cwc-select-option>
+            </cwc-select>
+          </cwc-cell>
+          <cwc-cell colspan="12" mobile-colspan="12" *ngIf="sourceList.length !== 0">
+            <cwc-select
+              style="width: 100%;"
+              label='Origen (Municipio)'
+              (cwcChange)="changeSource($event)"
+              design-version="v2">
+              <cwc-select-option value="0" selected="">Seleccionar</cwc-select-option>
+              <cwc-select-option [value]="source" *ngFor="let source of sourceList" >{{source}}</cwc-select-option>
+              </cwc-select>
+          </cwc-cell>
+      </cwc-grid>
+      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;"
+        *ngIf="dateList.length !== 0">
+        <cwc-cell class="flex flex__align--center" style="padding-bottom: 20px;" colspan="12" mobile-colspan="5">          
+          <h5 style="text-transform: capitalize;" >Fecha</h5>
+        </cwc-cell>
+        <cwc-cell colspan="12" mobile-colspan="7">
+          <cwc-select
+            (cwcChange)="changeDate($event)"
+            placeholder="Seleccionar"
+            design-version="v2">
+            <cwc-select-option value="0" selected="">Seleccionar</cwc-select-option>
+            <cwc-select-option [value]="dateL" *ngFor="let dateL of dateList" >{{dateL}}</cwc-select-option>
+          </cwc-select>
         </cwc-cell>
       </cwc-grid>
-      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;">
-        <cwc-cell class="flex flex__align--center" style="padding-bottom: 20px;" colspan="12" mobile-colspan="6">          
-          <h4>Rango de horario</h4>
+      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;"
+        *ngIf="timeList.length !== 0">
+        <cwc-cell class="flex flex__align--center" style="padding-bottom: 20px;" colspan="12" mobile-colspan="5">          
+          <h5 style="text-transform: capitalize;" >Rango de Hora</h5>
         </cwc-cell>
-        <cwc-cell colspan="12" mobile-colspan="6">
-          <cwc-input-time
-            label='Rango de horario'
-            type="number"
-            placeholder=" "
+        <cwc-cell colspan="12" mobile-colspan="7">
+          <cwc-select
+            placeholder="Seleccionar"
             design-version="v2"
-            ngDefaultControl
-            required
-          ></cwc-input-time>
+            (cwcChange)="changeHour($event)">
+            <cwc-select-option value="0" selected="">Seleccionar</cwc-select-option>
+            <cwc-select-option [value]="timeL" *ngFor="let timeL of timeList" >{{timeL}}</cwc-select-option>
+          </cwc-select>
         </cwc-cell>
       </cwc-grid>
-      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;">
-        <cwc-cell class="flex flex__align--center" style="padding-bottom: 20px;" colspan="12" mobile-colspan="6">          
-          <h4>Fecha</h4>
-        </cwc-cell>
-        <cwc-cell colspan="12" mobile-colspan="6">
-          <cwc-input-date
-            label='Fecha'
-            ngDefaultControl
-            design-version="v2" 
-            required
-          ></cwc-input-date>
-        </cwc-cell>
-      </cwc-grid>
-      <div class="content-button">
-        <cwc-button 
+      <div class="content-button" *ngIf="buttonActivate === true">
+        <cwc-button
+        (cwcClick)="searchTrips()"
         design-version="v1"
         variant="regular-block">BUSCAR VIAJES DISPONIBLES</cwc-button>
       </div>
