--- a/src/app/pages/waiting-list/components/request-waiting-list/request-waiting-list.component.html
+++ b/src/app/pages/waiting-list/components/request-waiting-list/request-waiting-list.component.html
@@ -1,56 +1,54 @@
 <cwc-grid class="demo-grid">
-  <cwc-cell colspan="6" mobile-colspan="12" (click)="detailRequest(request.id)" *ngFor="let request of requestsList">
-    <cwc-card class="m-all-xs" design-version="v2">
+  <cwc-cell colspan="6" mobile-colspan="12" *ngFor="let request of requests">
+    <cwc-card class="card-info" design-version="v2">
       <div class="main-content-card">
         <div class="header-card">
-          <cwc-cell colspan="6" mobile-colspan="12">
-            <div class="attr-user">Viaje {{request.travelsCode}}</div>
-          </cwc-cell>
-          <div style="text-align: right;">
-            <cwc-status-indicator variant='alert'>
-              {{request.statusTravel}}
-            </cwc-status-indicator>
+          <div class="avatar-info">
+            <span class="style-name">Viaje {{request.travelsCode}}</span>
           </div>
+            <cwc-status-indicator size="small" class="statusI" variant='success'>
+              <div class="statusI">{{request.statusRequest}}</div>
+            </cwc-status-indicator>
         </div>
 
-        <hr class="line">
+        <hr color="#D0D0D0"/>
 
-        <cwc-grid class="demo-grid">
-          <cwc-cell colspan="12" mobile-colspan="12">
+        <cwc-grid class="demo-grid" style="padding-top: 0.5rem;">
+          <cwc-cell colspan="12" mobile-colspan="12">   
             <div class="attr-user">Origen</div>
-            <span>{{request.origen}}</span>
+            <span class="attr-detail">{{request.origen}}</span>
           </cwc-cell>
         </cwc-grid>
 
-        <cwc-grid class="demo-grid">
+        <cwc-grid class="demo-grid center-cell">
           <cwc-cell colspan="12" mobile-colspan="12">
             <div class="attr-user">Destino</div>
-            <span>{{request.destino}}</span>
+            <span class="attr-detail">{{request.destino}}</span>
           </cwc-cell>
         </cwc-grid>
 
-        <cwc-grid class="demo-grid">
-          <cwc-cell colspan="6" mobile-colspan="12">
+        <cwc-grid class="demo-grid center-cell">
+          <cwc-cell mobile-colspan="6">
             <div class="attr-user">Fecha y hora</div>
-            <span>{{request.dateTravel}} {{request.timerStar}}</span>
+            <span class="attr-detail">{{request.dateTravels}} {{request.timerStar}}</span>
           </cwc-cell>
-          <cwc-cell colspan="6" mobile-colspan="12">
+          <cwc-cell mobile-colspan="6">
             <div class="attr-user">Numero de Placa</div>
-            <span>{{request.vehicleLissenceName}}</span>
+            <span class="attr-detail">{{request.vehicleLisence}}</span>
           </cwc-cell>
         </cwc-grid>
 
         <cwc-grid class="demo-grid center-cell">
           <cwc-cell colspan="12" mobile-colspan="12">
             <div class="attr-user">Modelo</div>
-            <span>{{request.vehicleModelName}}</span>
+            <span class="attr-detail">{{request.vehicleName}}</span>
           </cwc-cell>
         </cwc-grid>
 
         <cwc-grid class="demo-grid center-cell">
           <cwc-cell colspan="6" mobile-colspan="12">
             <div class="attr-user">Inicio de viaje</div>
-            <span>{{request.timerStar}}</span>
+            <span class="attr-detail">{{request.timerStar}}</span>
           </cwc-cell>
         </cwc-grid>
       </div>
