--- a/src/app/pages/waiting-list/waiting-list.page.html
+++ b/src/app/pages/waiting-list/waiting-list.page.html
@@ -10,6 +10,6 @@
   <div class="navbar" style="padding-top: 0.5rem;">
     <app-request-waiting-list [requests]="requestsList"></app-request-waiting-list>
   </div>
-  <cwc-button class="float" design-version="v2" size="large" variant="ghost" ratio="square" trailing-icon="plus"></cwc-button>
+  <cwc-button class="float" routerLink="new-request" design-version="v2" size="large" variant="ghost" ratio="square" trailing-icon="plus"></cwc-button>
 </app-layout>
  
