--- a/src/app/pages/travels/search-list/search-list.page.scss
+++ b/src/app/pages/travels/search-list/search-list.page.scss
@@ -33,3 +33,7 @@
     justify-content: center !important;
     // align-items: center !important;
  }
+
+ .content-list{
+   padding-bottom: 1rem;
+ }
