--- a/src/app/pages/travels/travels.page.html
+++ b/src/app/pages/travels/travels.page.html
@@ -12,7 +12,7 @@
             <cwc-select-option [value]="departament" *ngFor="let departament of departamentList" >{{departament}}</cwc-select-option>
             </cwc-select>
           </cwc-cell>
-          <cwc-cell colspan="12" mobile-colspan="12" *ngIf="sourceList.length !== 0">
+          <cwc-cell colspan="12" mobile-colspan="12">
             <cwc-select
               style="width: 100%;"
               label='Origen (Municipio)'
@@ -23,8 +23,7 @@
               </cwc-select>
           </cwc-cell>
       </cwc-grid>
-      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;"
-        *ngIf="dateList.length !== 0">
+      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;">
         <cwc-cell class="flex flex__align--center" style="padding-bottom: 20px;" colspan="12" mobile-colspan="5">          
           <h5 style="text-transform: capitalize;" >Fecha</h5>
         </cwc-cell>
@@ -38,8 +37,7 @@
           </cwc-select>
         </cwc-cell>
       </cwc-grid>
-      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;"
-        *ngIf="timeList.length !== 0">
+      <cwc-grid class="demo-grid flex flex__align--center" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1rem;">
         <cwc-cell class="flex flex__align--center" style="padding-bottom: 20px;" colspan="12" mobile-colspan="5">          
           <h5 style="text-transform: capitalize;" >Rango de Hora</h5>
         </cwc-cell>
