--- a/src/app/pages/waiting-list/new-request/components/request-drive-new/request-drive-new.component.html
+++ b/src/app/pages/waiting-list/new-request/components/request-drive-new/request-drive-new.component.html
@@ -33,7 +33,7 @@
             placeholder="Seleccionar"
             design-version="v2">
             <cwc-select-option value="0" selected="">Seleccionar</cwc-select-option>
-            <cwc-select-option [value]="dateL" *ngFor="let dateL of dateList" >{{dateL}}</cwc-select-option>
+            <cwc-select-option [value]="date" *ngFor="let date of dateList" >{{date}}</cwc-select-option>
           </cwc-select>
         </cwc-cell>
       </cwc-grid>
@@ -53,9 +53,9 @@
       </cwc-grid>
       <div class="content-button" *ngIf="buttonActivate === true">
         <cwc-button
-        (cwcClick)="searchTrips()"
+        (cwcClick)="sendRequest()"
         design-version="v1"
-        variant="regular-block">BUSCAR VIAJES DISPONIBLES</cwc-button>
+        variant="regular-block">ENVIAR SOLICITUD</cwc-button>
       </div>
     </form>
   </div>
