--- a/src/app/pages/waiting-list/new-request/new-request.page.html
+++ b/src/app/pages/waiting-list/new-request/new-request.page.html
@@ -1,2 +1,2 @@
-<div *ngIf="rol === 'Administrador Logistico Cemex' || rol === 'Administrador Logistico Tercero'"><app-request-admin-new></app-request-admin-new></div>
+<div *ngIf="rol !== 'Conductor'"><app-request-admin-new></app-request-admin-new></div>
 <div *ngIf="rol === 'Conductor'"><app-request-drive-new></app-request-drive-new></div>
