--- a/src/app/pages/drivers/components/driver-list/driver-list.component.html
+++ b/src/app/pages/drivers/components/driver-list/driver-list.component.html
@@ -11,6 +11,11 @@
           <span class="text-stade">{{driver.travelStatus}}</span>
         </div>   
       </cwc-cell>
+      <!--
+      <cwc-status-indicator style="text-align: end;" size="small" class="statusI" variant='success' colspan="12" mobile-colspan="3">
+        <div class="statusI">{{driver.travelStatus}}</div>
+      </cwc-status-indicator>
+      -->
     </cwc-grid>
     <cwc-grid class="demo-grid" >
       <cwc-cell colspan="12" mobile-colspan="6">   
