--- a/src/app/pages/drivers/drivers.page.html
+++ b/src/app/pages/drivers/drivers.page.html
@@ -17,5 +17,5 @@
   <div class="navbar">
     <app-driver-list [drivers]="driversList"></app-driver-list>
   </div>  
-  <cwc-button class="float" routerLink="agregar" design-version="v2" size="large" ratio="square" trailing-icon="plus"></cwc-button>
+  <cwc-button class="float" routerLink="agregar" design-version="v2" size="large" variant="ghost" ratio="square" trailing-icon="plus"></cwc-button>
 </app-layout>
