--- a/src/app/pages/vehicles/components/vehicle-list/vehicle-list.component.html
+++ b/src/app/pages/vehicles/components/vehicle-list/vehicle-list.component.html
@@ -11,6 +11,11 @@
           <span class="text-stade">Disponible</span>
         </div>   
       </cwc-cell>
+      <!--
+      <cwc-status-indicator style="text-align: end;" size="small" class="statusI" variant='success' colspan="12" mobile-colspan="4">
+        <div class="statusI">{{vehicle.statusTravel}}</div>
+      </cwc-status-indicator>
+      -->
     </cwc-grid>
     <cwc-grid class="demo-grid" >
       <cwc-cell colspan="12" mobile-colspan="6">   
