--- a/src/app/pages/drivers/components/driver-list/driver-list.component.html
+++ b/src/app/pages/drivers/components/driver-list/driver-list.component.html
@@ -1,4 +1,4 @@
-<cwc-card class="m-all-xs action accordion card-content-margin" *ngFor="let driver of drivers" (click)="detailDriver(driver.id)">
+<cwc-card *ngFor="let driver of drivers" (click)="detailDriver(driver.id)" class="card-info" design-version="v1">
   <div class="card-content">
     <cwc-grid class="demo-grid" >
       <cwc-cell colspan="12" mobile-colspan="9">   
@@ -11,11 +11,6 @@
           <span class="text-stade">{{driver.travelStatus}}</span>
         </div>   
       </cwc-cell>
-      <!--
-      <cwc-status-indicator style="text-align: end;" size="small" class="statusI" variant='success' colspan="12" mobile-colspan="3">
-        <div class="statusI">{{driver.travelStatus}}</div>
-      </cwc-status-indicator>
-      -->
     </cwc-grid>
     <cwc-grid class="demo-grid" >
       <cwc-cell colspan="12" mobile-colspan="6">   
