--- a/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
+++ b/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
@@ -1,8 +1,8 @@
 <app-layout class="card-size">
   <cwc-tabs>
-    <cwc-tab name='anteriores' active='true'>Anteriores</cwc-tab>
-    <cwc-tab name='programados' >Programados</cwc-tab>
-    <cwc-tab name='solicitudes' >Solicitudes</cwc-tab>
+    <cwc-tab name='anteriores' active='true' (click)="changeTab('anteriores')">Anteriores</cwc-tab>
+    <cwc-tab name='programados' (click)="changeTab('programados')">Programados</cwc-tab>
+    <cwc-tab name='solicitudes' (click)="changeTab('solicitudes')">Solicitudes</cwc-tab>
   </cwc-tabs>
   <cwc-grid class="demo-grid" row-gap="2px">
     <cwc-cell mobile-colspan="11" style="padding-top: 0.8rem;">     
@@ -18,7 +18,9 @@
       </div>  
     </cwc-cell>    
   </cwc-grid>  
-  <div class="navbar" style="padding-top: 0.8rem;">
-    <app-previous-trips-list></app-previous-trips-list>
+  <div [ngSwitch]="selectedTab" class="navbar" style="padding-top: 0.8rem;">
+    <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList"></app-previous-trips-list>
+    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="previousTripsList"></app-scheduled-trips-list>
+    <app-request-travel-list *ngSwitchCase="'solicitudes'" [tripsList]="previousTripsList"></app-request-travel-list>
   </div>
 </app-layout>
