--- a/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.html
+++ b/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.html
@@ -19,6 +19,6 @@
   </cwc-grid>  
   <div [ngSwitch]="selectedTab" class="navbar" style="padding-top: 0.8rem;">
     <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList"></app-previous-trips-list>
-    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="previousTripsList"></app-scheduled-trips-list>
+    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="scheduledTripsList"></app-scheduled-trips-list>
   </div>
 </app-layout>
