--- a/src/app/pages/my-travels/components/request-travel-list/request-travel-list.component.html
+++ b/src/app/pages/my-travels/components/request-travel-list/request-travel-list.component.html
@@ -16,7 +16,7 @@
                   <span class="style-name">Viaje {{trip.codeTravel}}</span>
               </div>                     
               <cwc-status-indicator style="text-align: end;" size="small" class="statusI" variant='success'>
-                <div class="statusI">{{trip.statusTravel}}</div>
+                <div class="statusI">{{trip.statusTravelString}}</div>
               </cwc-status-indicator>              
               <ion-icon name="ellipsis-vertical-outline" size="15"></ion-icon>
           </div>    
