my-travels/details-previous
Se ha generado la vista de detalles de viajes anteriores.

--- a/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.html
+++ b/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.html
@@ -8,7 +8,7 @@
 </cwc-grid>
 
 <cwc-grid class="demo-grid">
-  <cwc-cell *ngFor="let trip of tripsList" colspan="6" mobile-colspan="12">
+  <cwc-cell (click)="detailTrip(trip.id)" *ngFor="let trip of tripsList" colspan="6" mobile-colspan="12">
     <cwc-card class="card-info" design-version="v1">
       <div class="main-content-card">
           <div class="header-card">
