--- a/src/app/pages/my-travels/details-trip-previous/details-trip-previous.page.scss
+++ b/src/app/pages/my-travels/details-trip-previous/details-trip-previous.page.scss
@@ -106,3 +106,15 @@ span.text-btn {
     width: 100%;
     height: 100%;    
 }
+
+.card-info {
+    padding: 0.8rem;
+    padding-bottom: 1rem;
+}
+
+.header-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0.5rem;
+}
