my-travel/details
Se ha corregido la vista de detalles en solicitudes y programados para administra y conductor, en programados para conductor muestro unicamente la vista correcta para viajes con estado *Pre-Turno* aún falta crear la vista para *En Turno* ya que esta es del sprint 6.

--- a/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.html
+++ b/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.html
@@ -18,7 +18,7 @@
     </cwc-cell>    
   </cwc-grid>  
   <div [ngSwitch]="selectedTab" class="navbar" style="padding-top: 0.8rem;">
-    <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList"></app-previous-trips-list>
-    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="scheduledTripsList"></app-scheduled-trips-list>
+    <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList" [sizeList]="sizePrevious"></app-previous-trips-list>
+    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="scheduledTripsList" [sizeList]="sizeScheduled"></app-scheduled-trips-list>
   </div>
 </app-layout>
