--- a/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
+++ b/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
@@ -19,8 +19,8 @@
     </cwc-cell>    
   </cwc-grid>  
   <div [ngSwitch]="selectedTab" class="navbar" style="padding-top: 0.8rem;">
-    <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList"></app-previous-trips-list>
-    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="scheduledTripsList"></app-scheduled-trips-list>
-    <app-request-travel-list *ngSwitchCase="'solicitudes'" [tripsList]="requestTripsList"></app-request-travel-list>
+    <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList" [sizeList]="sizePrevious"></app-previous-trips-list>
+    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="scheduledTripsList" [sizeList]="sizeScheduled"></app-scheduled-trips-list>
+    <app-request-travel-list *ngSwitchCase="'solicitudes'" [tripsList]="requestTripsList" [sizeList]="sizePrevious"></app-request-travel-list>
   </div>
 </app-layout>
