--- a/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.html
+++ b/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.html
@@ -3,7 +3,7 @@
     <div class="detail_list_travels">Semana 22 de Agosto, 2020</div>
   </cwc-cell>
   <cwc-cell colspan="6" mobile-colspan="3">
-    <div class="detail_list_travels" style="text-align: end;">2 viajes</div>
+    <div class="detail_list_travels" style="text-align: end;">{{sizeList}}/{{tripsList.length}} viajes</div>
   </cwc-cell>
 </cwc-grid>
 
